--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,14 @@ buildscript {
         navigation_version="1.0.0-alpha09"
         preference_version="1.1.0-alpha02"
         material_version="1.0.0"
+        constraint_version="2.0.0-alpha3"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
