--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
     testImplementation 'junit:junit:4.12'
@@ -52,6 +52,7 @@ dependencies {
      * Design
      */
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0-alpha01'
     implementation "androidx.cardview:cardview:$cardview_version"
     implementation "com.google.android.material:material:$material_version"
 
