avant rename layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/MercrediTheme">
+        <activity android:name=".titi.JfsActivity">
+
+        </activity>
         <activity android:name=".MercrediActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
