--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="be.marche.mercredi">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_PROFILE"/>
 
     <application
             android:name=".App"
@@ -16,7 +15,6 @@
             android:supportsRtl="true"
             android:theme="@style/MercrediTheme">
         <activity android:name=".titi.JfsActivity">
-
         </activity>
         <activity android:name=".MercrediActivity">
             <intent-filter>
