--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+
     /**
      * Tests
      */
@@ -46,7 +47,7 @@ dependencies {
     /**
      * Androidx
      */
-    implementation "androidx.core:core:$androidx_version"
+    implementation "androidx.core:core-ktx:$androidx_version"
 
     /**
      * Ktx
@@ -60,17 +61,21 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0-alpha01'
     implementation "androidx.cardview:cardview:$cardview_version"
     implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.viewpager2:viewpager2:$viewpager_version"
 
     /**
      * LifeCycle
      */
+    def lifecycle_version_kt = '2.1.0-alpha03'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version_kt"
 
     /**
      * Room
      */
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-coroutines:$room_coroutine_version"
 
     /**
      * worker
@@ -80,8 +85,8 @@ dependencies {
     /**
      * Navigation
      */
-    implementation "android.arch.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "android.arch.navigation:navigation-ui-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     /**
      * Koin
