--- a/build.gradle
+++ b/build.gradle
@@ -2,35 +2,37 @@
 
 buildscript {
     ext {
-        androidx_version = "1.1.0-alpha04"
-        appcompat_version = '1.1.0-alpha01'
+        androidx_version = "1.1.0-alpha05"
+        appcompat_version = '1.1.0-alpha03'
         cardview_version = "1.0.0"
         constraintlayout_version = '2.0.0-alpha3'
         constraint_version="2.0.0-alpha3"
         coroutine_version = "1.1.0"
         coroutinesadapter_version = "0.9.2"
-        koin_version = "1.0.2"
-        kotlin_version = '1.3.11'
+        koin_version = "2.0.0-rc-1"
+        kotlin_version = '1.3.21'
         ktx_version = "1.0.1"
         legacysupport_version = '1.0.0'
         lifecycle_version = "2.0.0"
         logging_version = "3.11.0"
         material_version="1.0.0"
-        navigation_version="1.0.0-alpha11"
+        navigation_version="2.1.0-alpha01"
         picasso_version = "2.71828"
-        preference_version="1.1.0-alpha02"
-        recyclerview_version = "1.1.0-alpha02"
+        preference_version="1.1.0-alpha04"
+        recyclerview_version = "1.1.0-alpha03"
         retrofit_version = "2.5.0"
-        room_version = "2.1.0-alpha04"
+        room_version = "2.1.0-alpha06"
+        room_coroutine_version = "2.1.0-alpha04"
         timber_version = "4.7.1"
-        work_version = "1.0.0-beta03"
+        viewpager_version="1.0.0-alpha02"
+        work_version = "1.0.0"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
